--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,7 @@
 .footer-container {
     width: 100%;
-    padding: 1rem;
+    padding-top: .7rem;
+    padding-bottom: .5rem;
     footer {
     display: flex;
     justify-content: center;
