--- a/less/header.less
+++ b/less/header.less
@@ -116,7 +116,7 @@ justify-content: center;
 }
 @media @desktop {
     .header-container {
-        padding-left: 0;
+        padding-left: 2rem;
         padding-top: 5rem;
         padding-bottom: 1rem;
         align-items: flex-start;
